[package]
name = "jstorrent-host"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["io-daemon"]

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
thiserror = "1.0"
anyhow = "1.0"
rfd = "0.12"
base64 = "0.21"
axum = "0.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
sysinfo = "0.30"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
tempfile = "3.8"
chrono = "0.4.42"
lazy_static = "1.5.0"
ctrlc = "3.5.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[[bin]]
name = "jstorrent-host"
path = "src/main.rs"

[[bin]]
name = "jstorrent-link-handler"
path = "src/bin/stub.rs"


