[workspace]
members = ["common", "host", "io-daemon", "link-handler"]
resolver = "2"

[workspace.package]
version = "0.1.7"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
